# mokuro

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  publish-to-pypi.yml  ruff.yml
manga_ocr_overlay/: __init__.py  __main__.py  env.py  manga_page_ocr.py  overlay_generator.py  run.py  script.js  styles.css  utils.py
mokuro/: __init__.py  __main__.py  _version.py  cache.py  common.css  common.js  env.py  manga_page_ocr.py  mobile.css  mobile.js  mokuro_generator.py  overlay_generator.py  run.py  script.js  script.mobile.js  styles.css  styles.mobile.css  utils.py  volume.py
mokuro/legacy/: overlay_generator.py  script.js  styles.css
notebooks/: mokuro_demo.ipynb
reader/: README.md  package.json
reader/assets/demo/: UchiNoNyan'sDiary.mokuro
reader/lib/bitjs/: LICENSE  README.md  index.js  package.json  tsconfig.json
reader/lib/bitjs/archive/: archive.js  compress.js  decompress-internal.js  decompress.js  rarvm.js  unrar.js  untar.js  unzip.js  zip.js
reader/src/: index.html  service-worker.js
reader/src/css/: styles.css
reader/src/js/: catalog-ui.js  catalog.js  controls.js  icons.js  load-volume.js  page-utils.js  panzoom-utils.js  popup.js  script.js  select-box.js  settings-ui.js  settings.js  state.js  status-bar.js  upload.js  utils.js  web-import.js
tests/: conftest.py  generate_expected_results.py  regenerate_expected_results.py  test_cache.py  test_mokuro.py
tests/data/input/: test2_cbz.cbz
tests/data/volumes/: vol1.html  vol1_epub.epub
(+128 files in other folders)
