[project]
name = "mokuro"
authors = [
    {name = "Maciej Budyś", email = "kha-white@mail.com"},
]
description = "Browser reader for manga with selectable text"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]
dependencies = [
    "fire",
    "loguru",
    "manga-ocr>=0.1.7",
    "natsort",
    "numpy",
    "opencv-python>=4.1.2",
    "Pillow>=7.1.2",
    "pyclipper",
    "requests",
    "scipy",
    "setuptools",
    "shapely",
    "torch>=1.7.0",
    "torchsummary",
    "torchvision>=0.8.1",
    "transformers>=4.25.0",
    "tqdm>=4.41.0",
    "yattag",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/kha-white/mokuro"

[build-system]
requires = ["setuptools >= 61.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mokuro*", "comic_text_detector*"]

[tool.setuptools.package-data]
comic_text_detector = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "mokuro._version.__version__"}

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = ["comic_text_detector"]

[project.scripts]
mokuro = "mokuro.__main__:main"